--- a/data/ui/log.glade
+++ b/data/ui/log.glade
@@ -4,9 +4,11 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="log_window">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">Log</property>
     <property name="default-width">800</property>
     <property name="default-height">400</property>
     <signal name="delete-event" handler="on_log_window_delete_event" after="yes" swapped="no"/>
+    <signal name="show" handler="on_log_window_show" object="log_area" swapped="no"/>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
