--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -93,6 +93,7 @@
             <property name="receives-default">True</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
+            <signal name="clicked" handler="on_connect_btn_clicked" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -336,6 +337,7 @@
                     <property name="can-focus">True</property>
                     <property name="model">config_storage</property>
                     <property name="search-column">0</property>
+                    <signal name="cursor-changed" handler="on_config_treeview_cursor_changed" swapped="no"/>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection"/>
                     </child>
