feat: changes to UI and backend
[UI] Add connection status symbols and rounded borders.
[UI] Show MessageDialog when reset button is clicked.
[CODE] add function to `Base` to retrieve images.
[CODE] set `daemon = True` for threads launched from `openvpn.py`

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -1,9 +1,15 @@
 .vpn_connected {
     color: rgb(27, 98, 27);
+    border-radius: 25px;
+    border: 2px solid rgb(27, 98, 27);
+    padding: 4px;
 }
 
 .vpn_disconnected {
     color: rgb(119, 14, 14);
+    border-radius: 25px;
+    border: 2px solid rgb(119, 14, 14);
+    padding: 4px;
 }
 
 .reset_button {
