--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -441,4 +441,63 @@
       </object>
     </child>
   </object>
+  <object class="GtkMessageDialog" id="settings_reset_ask_sure">
+    <property name="can-focus">False</property>
+    <property name="type-hint">dialog</property>
+    <property name="gravity">center</property>
+    <property name="message-type">warning</property>
+    <property name="text" translatable="yes">Are you sure?</property>
+    <property name="secondary-text" translatable="yes">All settings will be permanently deleted.</property>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can-focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can-focus">False</property>
+            <property name="homogeneous">True</property>
+            <property name="layout-style">expand</property>
+            <child>
+              <object class="GtkButton" id="reset_cancel_btn">
+                <property name="label" translatable="yes">Cancel</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="relief">half</property>
+                <signal name="clicked" handler="reset_cancel_btn_clicked_cb" object="settings_reset_ask_sure" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="reset_yes_btn">
+                <property name="label" translatable="yes">Yes</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <signal name="clicked" handler="reset_yes_btn_clicked_cb" object="settings_reset_ask_sure" swapped="no"/>
+                <style>
+                  <class name="destructive-action"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
 </interface>
