--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -12,6 +12,62 @@
     <property name="visible">True</property>
     <property name="can-focus">False</property>
   </object>
+  <object class="GtkMessageDialog" id="openvpn_running_dlg">
+    <property name="can-focus">False</property>
+    <property name="type-hint">dialog</property>
+    <property name="message-type">error</property>
+    <property name="text" translatable="yes">OpenVPN is running in background!</property>
+    <property name="secondary-text" translatable="yes">OpenVPN is still running in background. It must be killed before attempting to connect again. Kill it?</property>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can-focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can-focus">False</property>
+            <property name="layout-style">expand</property>
+            <child>
+              <object class="GtkButton" id="open_vpn_running_cancel_btn">
+                <property name="label" translatable="yes">Cancel</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_open_vpn_running_cancel_btn_clicked" object="openvpn_running_dlg" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="open_vpn_running_kill_btn">
+                <property name="label" translatable="yes">Kill</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <signal name="clicked" handler="on_open_vpn_running_kill_btn_clicked" object="openvpn_running_dlg" swapped="no"/>
+                <style>
+                  <class name="destructive-action"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkPopover" id="popover">
     <property name="can-focus">False</property>
     <child>
@@ -295,7 +351,6 @@
                   <object class="GtkImage" id="statusbar_icon">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="icon-name">dialog-ok</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
