--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -254,7 +254,7 @@
                       <object class="GtkImage">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="icon-name">edit-copy</property>
+                        <property name="icon-name">edit-copy-symbolic</property>
                       </object>
                     </child>
                   </object>
