--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -351,6 +351,7 @@
                   <object class="GtkImage" id="statusbar_icon">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
+                    <property name="icon-name">applications-system-symbolic</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
