--- a/data/ui/about.glade
+++ b/data/ui/about.glade
@@ -13,9 +13,7 @@
     <property name="website">https://github.com/jkotra/eOVPN</property>
     <property name="authors">Jagadeesh Kotra</property>
     <property name="artists">OpenVPN
-Icon8
-SmashIcons
-Kiranshastry (flaticon)</property>
+</property>
     <property name="logo-icon-name">image-missing</property>
     <property name="license-type">gpl-3-0</property>
     <signal name="delete-event" handler="on_about_dlg_delete_event" after="yes" swapped="no"/>
