--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -175,7 +175,7 @@
                       <attribute name="scale" value="2"/>
                     </attributes>
                     <style>
-                      <class name="vpn_disconnected"/>
+                      <class name="badge_status"/>
                     </style>
                   </object>
                   <packing>
@@ -186,18 +186,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkImage" id="connection_symbol">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="halign">end</property>
-                    <property name="icon-name">application-x-executable</property>
-                  </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">True</property>
-                    <property name="padding">12</property>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
@@ -240,9 +229,6 @@
                   </packing>
                 </child>
                 <child>
-                  <placeholder/>
-                </child>
-                <child>
                   <object class="GtkButton" id="copy_btn">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
@@ -265,6 +251,9 @@
                     <property name="pack-type">end</property>
                     <property name="position">1</property>
                   </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
@@ -390,6 +379,29 @@
                     <property name="fill">True</property>
                     <property name="padding">4</property>
                     <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="openvpn_proto">
+                    <property name="can-focus">False</property>
+                    <property name="margin-top">4</property>
+                    <property name="margin-bottom">4</property>
+                    <property name="label" translatable="yes">TCP/UDP</property>
+                    <attributes>
+                      <attribute name="weight" value="ultrabold"/>
+                      <attribute name="scale" value="0.5"/>
+                    </attributes>
+                    <style>
+                      <class name="badge_proto"/>
+                      <class name="bg_blue"/>
+                    </style>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="padding">4</property>
+                    <property name="pack-type">end</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
