--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -77,7 +77,7 @@
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
                     <property name="margin-start">4</property>
-                    <property name="label" translatable="yes">OpenVPN remote directory: </property>
+                    <property name="label" translatable="yes">Configuration Source: </property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
