add exit signal to menu item.
- add signal to 'exit' in menu.
- remove 'auth.txt' on reset click.

--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -112,7 +112,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkModelButton">
+          <object class="GtkModelButton" id="menu_exit">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
@@ -120,6 +120,7 @@
             <property name="margin-end">4</property>
             <property name="text" translatable="yes">Exit</property>
             <property name="centered">True</property>
+            <signal name="clicked" handler="on_menu_exit_clicked" object="mainwindow" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
