--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -76,6 +76,42 @@
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <child>
+          <object class="GtkModelButton" id="log_btn">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="margin-left">4</property>
+            <property name="margin-right">4</property>
+            <property name="text" translatable="yes">Log</property>
+            <property name="centered">True</property>
+            <signal name="clicked" handler="on_log_btn_clicked" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="padding">4</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkModelButton" id="Update">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="margin-left">4</property>
+            <property name="margin-right">4</property>
+            <property name="text" translatable="yes">Update</property>
+            <property name="centered">True</property>
+            <signal name="clicked" handler="on_update_btn_clicked" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="padding">4</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkModelButton" id="settings_btn">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
@@ -90,7 +126,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="padding">4</property>
-            <property name="position">0</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child>
@@ -108,7 +144,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="padding">4</property>
-            <property name="position">1</property>
+            <property name="position">3</property>
           </packing>
         </child>
         <child>
@@ -126,7 +162,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="padding">4</property>
-            <property name="position">2</property>
+            <property name="position">4</property>
           </packing>
         </child>
       </object>
@@ -291,36 +327,10 @@
             <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkButton" id="update_btn">
-                <property name="label" translatable="yes">Update</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <property name="halign">center</property>
-                <signal name="clicked" handler="on_update_btn_clicked" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">4</property>
-                <property name="position">0</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
-              <object class="GtkLabel" id="last_updated_lbl">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="label" translatable="yes">Last Updated: 01-01-1970 00:00:00</property>
-                <attributes>
-                  <attribute name="scale" value="0.65000000000000002"/>
-                </attributes>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">10</property>
-                <property name="position">1</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
               <object class="GtkSeparator">
@@ -484,16 +494,7 @@
         <property name="can-focus">False</property>
         <property name="show-close-button">True</property>
         <child>
-          <object class="GtkButton" id="log_btn">
-            <property name="label" translatable="yes">Log</property>
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="receives-default">True</property>
-            <signal name="clicked" handler="on_log_btn_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
+          <placeholder/>
         </child>
         <child>
           <object class="GtkMenuButton" id="menubutton1">
