fix spacing after reveal and auto close notification only once

--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -478,11 +478,12 @@
             <property name="can-focus">True</property>
             <property name="receives-default">False</property>
             <property name="halign">center</property>
+            <property name="valign">start</property>
             <property name="draw-indicator">True</property>
             <signal name="toggled" handler="on_connect_on_launch_chkbox_toggled" swapped="no"/>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="pack-type">end</property>
             <property name="position">4</property>
