fix broken signals

--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -24,12 +24,14 @@
           <object class="GtkStackSwitcher">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="halign">center</property>
             <property name="homogeneous">True</property>
             <property name="stack">stack1</property>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
+            <property name="padding">4</property>
             <property name="position">0</property>
           </packing>
         </child>
@@ -78,6 +80,7 @@
                                     <property name="visible">True</property>
                                     <property name="can-focus">True</property>
                                     <property name="receives-default">True</property>
+                                    <signal name="clicked" handler="on_revealer_close_btn_clicked" swapped="no"/>
                                     <child>
                                       <object class="GtkImage">
                                         <property name="visible">True</property>
@@ -187,6 +190,7 @@
                             <property name="valign">center</property>
                             <property name="margin-end">4</property>
                             <property name="margin-bottom">6</property>
+                            <signal name="clicked" handler="on_settings_validate_btn_clicked" object="openvpn_config_remote_addr" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -212,6 +216,7 @@
                         <property name="halign">center</property>
                         <property name="valign">center</property>
                         <property name="draw-indicator">True</property>
+                        <signal name="toggled" handler="on_update_on_start_toggled" swapped="no"/>
                         <child>
                           <object class="GtkBox">
                             <property name="visible">True</property>
@@ -281,6 +286,7 @@
                                         <property name="can-focus">True</property>
                                         <property name="receives-default">False</property>
                                         <property name="draw-indicator">True</property>
+                                        <signal name="toggled" handler="on_req_auth_toggled" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -427,6 +433,7 @@
                                 <property name="margin-top">4</property>
                                 <property name="filter">filefilter1</property>
                                 <property name="title" translatable="yes"/>
+                                <signal name="file-set" handler="on_crt_chooser_file_set" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="expand">True</property>
@@ -619,6 +626,16 @@
               </object>
               <packing>
                 <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSpinner" id="settings_spinner">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+              <packing>
+                <property name="pack-type">end</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
